@@ -1,3 +1,6 @@
+2012-02-02
+ * center calculations
+
 2012-02-01
  * finalised include directory structure
  * added killall_wse command (without script end)
